Solve bottom margin and horizontal scroll problem

--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,21 @@
 body {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    background-color: #F2F2F2;
+    background-color: #FAFAFA;
+
+}
+.backbone {
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #FAFAFA;
+}
+main {
+    overflow: hidden;
+
 }
 html {
     font-size: 10px;
@@ -134,7 +147,9 @@ Styling for Desktop devices
     /* ////////////////////
     Styling main
     //////////////////// */
-    
+    .backbone {
+        width: 144rem;
+    }
     h3 {
         margin-bottom: 0.6rem;
     }
@@ -172,7 +187,7 @@ Styling for Desktop devices
     }
     #karma {
         left: 54.5rem;
-        bottom: 0;
+        bottom: 8rem;
     }
     #calculator {
         right: 16.5rem;
